--- a/generic.html
+++ b/generic.html
@@ -1,142 +1,149 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+
 <!--
+
 	Stellar by HTML5 UP
+
 	html5up.net | @ajlkn
+
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+
 -->
+
 <html>
-  <head>
-    <title>Neneneen - Stellar by HTML5 UP</title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript
-      ><link rel="stylesheet" href="assets/css/noscript.css"
-    /></noscript>
-  </head>
-  <body class="is-preload">
-    <!-- Wrapper -->
-    <div id="wrapper">
-      <!-- Header -->
-      <header id="header">
-        <h1>Generic</h1>
-        <p>Ipsum dolor sit amet nullam</p>
-      </header>
 
-      <!-- Main -->
-      <div id="main">
-        <!-- Content -->
-        <section id="content" class="main">
-          <span class="image main"><img src="images/pic04.jpg" alt="" /></span>
-          <h2>Magna feugiat lorem</h2>
-          <p>
-            Donec eget ex magna. Interdum et malesuada fames ac ante ipsum
-            primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
-            mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor
-            sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet,
-            fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit.
-            Donec urna ex, lacinia in purus ac, pretium pulvinar mauris.
-            Curabitur sapien risus, commodo eget turpis at, elementum convallis
-            fames ac ante ipsum primis in faucibus.
-          </p>
-          <p>
-            Pellentesque venenatis dolor imperdiet dolor mattis sagittis.
-            Praesent rutrum sem diam, vitae egestas enim auctor sit amet.
-            Consequat leo mauris, consectetur id ipsum sit amet, fersapien
-            risus, commodo eget turpis at, elementum convallis elit enim turpis
-            lorem ipsum dolor sit amet feugiat. Phasellus convallis elit id
-            ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat
-            malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna
-            est aliquam sem, sit amet est velit quis lorem.
-          </p>
-          <h2>Tempus veroeros</h2>
-          <p>
-            Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus
-            nunc placerat. Tempus adipiscing turpis non blandit accumsan eget
-            lacinia nunc integer interdum amet aliquam ut orci non col ut ut
-            praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac
-            commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante
-            accumsan nisi eu placerat gravida placerat adipiscing in risus fusce
-            vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet
-            lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing
-            accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a
-            iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc
-            lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur
-            ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing
-            nulla. Non vestibulum ac interdum condimentum semper commodo massa
-            arcu.
-          </p>
-        </section>
-      </div>
+	<head>
 
-      <!-- Footer -->
-      <footer id="footer">
-        <section>
-          <h2>Aliquam sed mauris</h2>
-          <p>
-            Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat
-            magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris.
-            Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas
-            velit, vitae tincidunt odio.
-          </p>
-          <ul class="actions">
-            <li><a href="#" class="button">Learn More</a></li>
-          </ul>
-        </section>
-        <section>
-          <h2>Etiam feugiat</h2>
-          <dl class="alt">
-            <dt>Address</dt>
-            <dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-            <dt>Phone</dt>
-            <dd>(000) 000-0000 x 0000</dd>
-            <dt>Email</dt>
-            <dd><a href="#">information@untitled.tld</a></dd>
-          </dl>
-          <ul class="icons">
-            <li>
-              <a href="#" class="icon brands fa-twitter alt"
-                ><span class="label">Twitter</span></a
-              >
-            </li>
-            <li>
-              <a href="#" class="icon brands fa-facebook-f alt"
-                ><span class="label">Facebook</span></a
-              >
-            </li>
-            <li>
-              <a href="#" class="icon brands fa-instagram alt"
-                ><span class="label">Instagram</span></a
-              >
-            </li>
-            <li>
-              <a href="#" class="icon brands fa-github alt"
-                ><span class="label">GitHub</span></a
-              >
-            </li>
-            <li>
-              <a href="#" class="icon brands fa-dribbble alt"
-                ><span class="label">Dribbble</span></a
-              >
-            </li>
-          </ul>
-        </section>
-        <p class="copyright">
-          &copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.
-        </p>
-      </footer>
-    </div>
+		<title>Formatvergleich</title>
 
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
-  </body>
+		<meta charset="utf-8" />
+
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+
+		<link rel="stylesheet" href="assets/css/main.css" />
+
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+	</head>
+
+	<body class="is-preload">
+
+
+
+		<!-- Wrapper -->
+
+			<div id="wrapper">
+
+
+
+				<!-- Header -->
+
+					<header id="header">
+
+						<h1>Formatvergleich</h1>
+
+					</header>
+
+
+
+				<!-- Main -->
+
+					<div id="main">
+
+
+
+						<!-- Content -->
+
+							<section id="content" class="main">
+
+								<span class="image main"><img src="images/Formate.jpg" alt="" /></span>
+
+								<p>
+
+	<strong>Videoformate</strong></br>	
+	<strong>.MP4</strong></br>
+	Ist das mit Abstand am haeufigsten benutzte und bekannteste Videoformat, vor allem weil Apple dieses Dateiformat bevorzugt, es laesst sich aber auf den meisten anderen Geraeten wiedergeben.
+	Es verwendet die Kodierung der MPEG-4-Kodierung, um Video- und Audiodateien und Text zu speichern, aber es bietet eine geringere Aufloesung als andere Formate.
+	Das Format ist am besten fuer Videos, die auf Social-Media-Plattformen hochgeladen werden.
+	</br><strong>Empfehlung:</strong> Fuer Videos verwenden, die auf Social-Media hochgeladen werden. </br>
+	
+	<strong>.MKV</strong></br>
+	Dieses in Russland entwickelte Matroska-Multimedia-Containerformat ist ein kostenlos benutzbares Open Source-Format. 
+	Es unterstuetzt so gut wie jeden Codec, aber wird selber nicht von vielen Programmen unterstuetzt. 
+	Es ist eine gute Wahl, wenn man damit rechnet, dass das Video auf einem Fernseher oder Computer mit einem OS-Mediaplayer wie VLC oder Miro wiedergegeben wird.
+	</br><strong>Empfehlung:</strong>  Fuer Videos, die auf Fernsehern oder Computern abgespielt werden sollen.</br>
+	<strong>.MOV</strong></br>
+	MOV speichert sowohl Video, Audio als auch Effekte in hoher Qualitaet, Dateien sind jedoch oft ziemlich gross.
+	Das fuer den QuickTime-Player von Apple entwickelte MOV-Format nutzt die MPEG-4-Kodierung fuer die Wiedergabe in QuickTime fuer Windows.
+	Es wird von Facebook unterstuetzt, laesst sich auch auf Fernsehern wiedergeben.  
+	</br><strong>Empfehlung:</strong> Verwenden, wenn man viel Speicherplatz hat und hohe Qualitaet will.</br>
+
+	<strong>Bildformate</strong></br>
+	(Quelle: https://www.techsmith.de/blog/was-sie-ueber-bildformate-wissen-sollten/)</br>
+	<strong>.jpg / .jpeg</strong></br>
+	Das Bildformat von der Joint Photographers Expert Group kurz J.P.E.G. ist das beliebteste Bildformat, das verlustreich ist.
+	Man kann die Komprimierung nach eigenen Belieben einstellen.
+	Ein JPG-Bild eignet sich besonders, wenn man eine kleine Dateigroesse braucht.
+	</br><strong>Empfehlung:</strong>  Bei wenig Speicherplatz verwenden.</br>
+	<strong>.png</strong></br>
+	Das PNG Bildformat ist das Beste von allen verlustfreien komprimierten Bildformate und das am meisten verwendete und verlustfreie Datenformat im Internet.
+	Das PNG-Format eignet sich besonders gut fuer transparente Hintergruende. 
+	</br><strong>Empfehlung:</strong>  Wenn man transparente Hintergruende mit wenig Qualitaetsverlust braucht.</br>
+	<strong>.tif / .tiff</strong></br>
+	Das Tagged Image File Format, kurz T.I.F.F. gibt es als komprimierte und als nicht komprimierte Version.
+	TIFF-Dateien, die komprimiert wurden, aehneln Dateien vom PNG-Format.
+	Unkomprimierte Dateien hingegen sind fast so gross wie Dateien vom BMP-Format.
+	</br><strong>Empfehlung:</strong> Ideal zum Speichern von Bildern und pers. Dokumenten in hoher Qualitaet.</br>
+
+	<strong>Soundformate</strong></br>
+	(Quelle: https://lehrerfortbildung-bw.de/st_digital/medienwerkstatt/multimedia/audio/formate/)</br>
+	<strong>.MP3</strong></br>
+	Wurde aus einer Gruppe von Experten als Audioformat mit einem standardisierten Komprimierungsverfahren entwickelt, eine grosse Staerke von MP3-Dateien sind die, im Vergleich mit anderen Audioformaten kleinen Dateien mit ueberraschend hoher Soundqualitaet.
+	Das heisst, dass man im Vergleich zu zum Beispiel WAV-Dateien wesentlich weniger Speicherplatz fuer die praktisch gleich Soundqualitaet braeuchte.
+	</br><strong>Empfehlung:</strong>  Wenn man wenig Speicherplatz hat und trotzdem moeglichst hohe Qualitaet will.</br> 
+	<strong>.OGG</strong></br>
+	Ist ein patentfreier Codec zur verlustbehafteten Audiokompression. 
+	Wurde von Xiph.Org als Alternative zum sehr verbreiteten MP3-Format entwickelt.
+	Im Vergleich zu MP3 verliert es mehr Soundqualitaet.
+	</br><strong>Empfehlung:</strong> Verwenden, wenn man eine Alternative zu MP3 braucht.</br>
+	<strong>.WAV</strong></br>
+	Dient der digitalen Speicherung von Audiodateien, diese Art von Dateien enthalten meistens Rohdateien, die unkomprimiert sind.
+	Der Verzicht auf diese Komprimierung bedeutet, dass die Datei in hoechstmoeglicher Qualitaet gespeichert ist, das erfordert einen enormen Speicherplatz, 10 Minuten Musik sind ungefaehr 100 MB an Platz.
+	</br><strong>Empfehlung:</strong>  Ist ideal, wenn grosser Speicher und Musik in hoher Qualitaet geniessen will.
+	</p>
+							</section>
+
+
+
+					</div>
+
+
+
+				<!-- Footer -->
+
+
+			</div>
+
+
+
+		<!-- Scripts -->
+
+			<script src="assets/js/jquery.min.js"></script>
+
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+
+			<script src="assets/js/browser.min.js"></script>
+
+			<script src="assets/js/breakpoints.min.js"></script>
+
+			<script src="assets/js/util.js"></script>
+
+			<script src="assets/js/main.js"></script>
+
+
+
+	</body>
+
 </html>
