--- a/impressum.html
+++ b/impressum.html
@@ -2,29 +2,38 @@
 
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta charset="UTF-8">
 
 		<link rel="stylesheet" href="assets/css/main.css" />
 
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+<title>Impressum</title>
+<h1><strong>Impressum + Copyright Lizenzen + Urheberrecht</strong></h1>
+<ul class="actions special">
+										<li><a href="index.html" class="button primary">Startseite</a></li>
+										<li><a href="quellen.html" class="button primary">Quellen</a></li>
+										<li><a href="animations1.html" class="button primary">Animationen Part 1</a></li>
+										<li><a href="animations2.html" class="button primary">Animationen Part 2</a></li>
 
+									</ul>
 	</head>
 
 <body class="is-preload">
 <div id="main">
-<h1><strong>Impressum + Copyright Lizenzen + Urheberrecht</strong></h1>
+<h3>Urheber / Publisher: GTA V, Till Strasser, Luca Viggiano, Louis Widmer, Silvan MÃ¼ller</h3>
 <h3>Copyright vs. Lizenzen im Internet</h3>
 <p>
 <strong>Was ist Fair Use?</strong></br>
-Fair Use ist eine Rechtsnorm, die regelt, dass urheberrechtlich geschützter Stoff in manchen Fällen ohne Erlaubnis vom Urheber benutzt werden kann, es gilt aber nicht automatisch. 
+Fair Use ist eine Rechtsnorm, die regelt, dass urheberrechtlich geschÃ¼tzter Stoff in manchen FÃ¤llen ohne Erlaubnis vom Urheber benutzt werden kann, es gilt aber nicht automatisch. 
 </br>
 <strong>Copyright</strong></br>
-Beim Copyright geht es darum, dass du dein geistiges Eigentum vor fremder, unerlaubter Verwendung schützen kannst.
+Beim Copyright geht es darum, dass du dein geistiges Eigentum vor fremder, unerlaubter Verwendung schÃ¤tzen kannst.
 </br>
 <strong>Lizenzen</strong></br>
-Eine Lizenz ist in verschiedenen Fachgebieten die Genehmigung oder Erlaubnis an ein Rechtssubjekt, ein Recht wirtschaftlich nutzen zu dürfen
+Eine Lizenz ist in verschiedenen Fachgebieten die Genehmigung oder Erlaubnis an ein Rechtssubjekt, ein Recht wirtschaftlich nutzen zu dÃ¼rfen
 </br>
 <strong>Public Domain</strong></br>
-steht für diejenigen Inhalte, die nicht oder nicht mehr urheberrechtlich geschützt und damit frei verfügbar sind.
+steht fÃ¼r diejenigen Inhalte, die nicht oder nicht mehr urheberrechtlich geschÃ¼tzt und damit frei verfÃ¼gbar sind.
 </br></p>
 <h3><strong>Impressum</strong></h3>
 <p><strong>Anbieter:</strong><br />Till Strasser, Louis Widmer, Luca Viggiano</p>
