--- a/animations2.html
+++ b/animations2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animationen</title>
+    <title>Animationen Part 2</title>
     <link rel="stylesheet" href="assets/css/animations2.css">
 
     <script>
@@ -28,7 +28,7 @@
     </script>
 </head>
 <body class="body">
-    <header class="header">
+    
         <div class="dropdown">
                   </div>
         <script>
@@ -52,7 +52,7 @@
         </script>
     </header>
 
-    <main class="main">        
+    <main class="main">       
         <section>
             <h1>Scroll Down to Reveal Elements &#8595;</h1>
         </section>
