--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta charset="UTF-8">
 
 		<link rel="stylesheet" href="assets/css/main.css" />
 
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<title>Startseite</title>
 
 	</head>
 
@@ -79,24 +81,24 @@
 								 <footer class="major">
 								<h3><strong>.MOV</strong></h3></br>
 								<video src="videos/CantTouchThis.mov" width="1000" controls></video></br>
-	<p>MOV speichert sowohl Video, Audio als auch Effekte in hoher Qualitaet, Dateien sind jedoch oft ziemlich gross.
-	Das fuer den QuickTime-Player von Apple entwickelte MOV-Format nutzt die MPEG-4-Kodierung fuer die Wiedergabe in QuickTime fuer Windows.
-	Es wird von Facebook unterstuetzt, laesst sich auch auf Fernsehern wiedergeben.  
-	</br><strong>Empfehlung:</strong> Verwenden, wenn man viel Speicherplatz hat und hohe Qualitaet will.</br></p>
+	<p>MOV speichert sowohl Video, Audio als auch Effekte in hoher Qualität, Dateien sind jedoch oft ziemlich gross.
+	Das für den QuickTime-Player von Apple entwickelte MOV-Format nutzt die MPEG-4-Kodierung für die Wiedergabe in QuickTime für Windows.
+	Es wird von Facebook unterstützt, lässt sich auch auf Fernsehern wiedergeben.  
+	</br><strong>Empfehlung:</strong> Verwenden, wenn man viel Speicherplatz hat und hohe Qualität will.</br></p>
 
 							        <h3><strong>.MP4</strong></h3></br>
 							        <video src="videos/CantTouchThis.mp4" width="1000" controls></video></br>
-	<p>Ist das mit Abstand am haeufigsten benutzte und bekannteste Videoformat, vor allem weil Apple dieses Dateiformat bevorzugt, es laesst sich aber auf den meisten anderen Geraeten wiedergeben.
-	Es verwendet die Kodierung der MPEG-4-Kodierung, um Video- und Audiodateien und Text zu speichern, aber es bietet eine geringere Aufloesung als andere Formate.
-	Das Format ist am besten fuer Videos, die auf Social-Media-Plattformen hochgeladen werden.
-	</br><strong>Empfehlung:</strong> Fuer Videos verwenden, die auf Social-Media hochgeladen werden. </br></p>
+	<p>Ist das mit Abstand am häufigsten benutzte und bekannteste Videoformat, vor allem weil Apple dieses Dateiformat bevorzugt, es lässt sich aber auf den meisten anderen Geräten wiedergeben.
+	Es verwendet die Kodierung der MPEG-4-Kodierung, um Video- und Audiodateien und Text zu speichern, aber es bietet eine geringere Auflösung als andere Formate.
+	Das Format ist am besten für Videos, die auf Social-Media-Plattformen hochgeladen werden.
+	</br><strong>Empfehlung:</strong> Für Videos verwenden, die auf Social-Media hochgeladen werden. </br></p>
 
 								<h3><strong>.MKV</strong></h3></br>
 								<video src="videos/CantTouchThis.mkv" width="1000" controls></video></br>
 	<p>Dieses in Russland entwickelte Matroska-Multimedia-Containerformat ist ein kostenlos benutzbares Open Source-Format. 
-	Es unterstuetzt so gut wie jeden Codec, aber wird selber nicht von vielen Programmen unterstuetzt. 
+	Es unterstützt so gut wie jeden Codec, aber wird selber nicht von vielen Programmen unterstützt. 
 	Es ist eine gute Wahl, wenn man damit rechnet, dass das Video auf einem Fernseher oder Computer mit einem OS-Mediaplayer wie VLC oder Miro wiedergegeben wird.
-	</br><strong>Empfehlung:</strong>  Fuer Videos, die auf Fernsehern oder Computern abgespielt werden sollen.</br></p>
+	</br><strong>Empfehlung:</strong>  Für Videos, die auf Fernsehern oder Computern abgespielt werden sollen.</br></p>
 	<img src="images/Videovergleich.PNG" width="1000"></img>
 	
 								</footer>
@@ -120,19 +122,19 @@
 								<p>
 	Ist ein patentfreier Codec zur verlustbehafteten Audiokompression. 
 	Wurde von Xiph.Org als Alternative zum sehr verbreiteten MP3-Format entwickelt.
-	Im Vergleich zu MP3 verliert es mehr Soundqualitaet.
+	Im Vergleich zu MP3 verliert es mehr Soundqualität.
 	</br><strong>Empfehlung:</strong> Verwenden, wenn man eine Alternative zu MP3 braucht.</br>
 								</p>	
 								<h3><strong>.MP3</strong></h3></br>
 								<audio src="/sounds/NeinMiguel.mp3" controls>mp3</audio>
-								<p>	Wurde aus einer Gruppe von Experten als Audioformat mit einem standardisierten Komprimierungsverfahren entwickelt, eine grosse Staerke von MP3-Dateien sind die, im Vergleich mit anderen Audioformaten kleinen Dateien mit ueberraschend hoher Soundqualitaet.
-	Das heisst, dass man im Vergleich zu zum Beispiel WAV-Dateien wesentlich weniger Speicherplatz fuer die praktisch gleich Soundqualitaet braeuchte.
-	</br><strong>Empfehlung:</strong>  Wenn man wenig Speicherplatz hat und trotzdem moeglichst hohe Qualitaet will.</br></p>
+								<p>	Wurde aus einer Gruppe von Experten als Audioformat mit einem standardisierten Komprimierungsverfahren entwickelt, eine grosse Stärke von MP3-Dateien sind die, im Vergleich mit anderen Audioformaten kleinen Dateien mit überraschend hoher Soundqualität.
+	Das heisst, dass man im Vergleich zu zum Beispiel WAV-Dateien wesentlich weniger Speicherplatz für die praktisch gleich Soundqualität bräuchte.
+	</br><strong>Empfehlung:</strong>  Wenn man wenig Speicherplatz hat und trotzdem möglichst hohe Qualität will.</br></p>
 								<h3><strong>.WAV</strong></h3></br>
 								<audio src="/sounds/NeinMiguel.wav" controls>wav</audio></br>							
 	Dient der digitalen Speicherung von Audiodateien, diese Art von Dateien enthalten meistens Rohdateien, die unkomprimiert sind.
-	Der Verzicht auf diese Komprimierung bedeutet, dass die Datei in hoechstmoeglicher Qualitaet gespeichert ist, das erfordert einen enormen Speicherplatz, 10 Minuten Musik sind ungefaehr 100 MB an Platz.
-	</br><strong>Empfehlung:</strong>  Ist ideal, wenn grosser Speicher und Musik in hoher Qualitaet geniessen will.
+	Der Verzicht auf diese Komprimierung bedeutet, dass die Datei in höchstmöglicher Qualität gespeichert ist, das erfordert einen enormen Speicherplatz, 10 Minuten Musik sind ungefähr 100 MB an Platz.
+	</br><strong>Empfehlung:</strong>  Ist ideal, wenn grosser Speicher und Musik in hoher Qualität geniessen will.
 <img src="images/Soundvergleich.PNG" width="1000"></img>
 
 								</footer>
@@ -155,21 +157,21 @@
 <p>
 Das Bildformat von der Joint Photographers Expert Group kurz J.P.E.G. ist das beliebteste Bildformat, das verlustreich ist.
 	Man kann die Komprimierung nach eigenen Belieben einstellen.
-	Ein JPG-Bild eignet sich besonders, wenn man eine kleine Dateigroesse braucht.
+	Ein JPG-Bild eignet sich besonders, wenn man eine kleine Dateigrösse braucht.
 	</br><strong>Empfehlung:</strong> Bei wenig Speicherplatz verwenden.
 </p>		
 									<h3><strong>.png</strong></h3></br>
 									<img src="images/LucaWhenNoIneichen.png" alt="" width="800"/>
 <p>Das PNG Bildformat ist das Beste von allen verlustfreien komprimierten Bildformate und das am meisten verwendete und verlustfreie Datenformat im Internet.
-	Das PNG-Format eignet sich besonders gut fuer transparente Hintergruende. 
-	</br><strong>Empfehlung:</strong>  Wenn man transparente Hintergruende mit wenig Qualitaetsverlust braucht.</br></p>
+	Das PNG-Format eignet sich besonders gut für transparente Hintergründe. 
+	</br><strong>Empfehlung:</strong>  Wenn man transparente Hintergründe mit wenig Qualitätsverlust braucht.</br></p>
 									<h3><strong>.tif / .tiff</strong></h3></br>
 								         <img src="images/LucaWhenNoIneichen.tiff" alt="bmp" width="800"/>						
 									
 <p>Das Tagged Image File Format, kurz T.I.F.F. gibt es als komprimierte und als nicht komprimierte Version.
-	TIFF-Dateien, die komprimiert wurden, aehneln Dateien vom PNG-Format.
+	TIFF-Dateien, die komprimiert wurden, ähneln Dateien vom PNG-Format.
 	Unkomprimierte Dateien hingegen sind fast so gross wie Dateien vom BMP-Format.
-	</br><strong>Empfehlung:</strong> Ideal zum Speichern von Bildern und pers. Dokumenten in hoher Qualitaet.</p></br>
+	</br><strong>Empfehlung:</strong> Ideal zum Speichern von Bildern und pers. Dokumenten in hoher Qualität.</p></br>
 
 <img src="images/Bildervergleich.PNG" width="1000"></img>	
 									
