--- a/quellen.html
+++ b/quellen.html
@@ -1,20 +1,67 @@
 <head>
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, user-scalable=no"
+  />
+  <meta charset="UTF-8" />
 
-		<link rel="stylesheet" href="assets/css/main.css" />
+  <link rel="stylesheet" href="assets/css/main.css" />
 
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-
-	</head>
+  <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+  <title>Quellen</title>
+</head>
+<header>
+  <h1><strong>Quellen</strong></h1>
+  <ul class="actions special">
+    <li><a href="index.html" class="button primary">Startseite</a></li>
+    <li><a href="impressum.html" class="button primary">Impressum</a></li>
+    <li>
+      <a href="animations1.html" class="button primary">Animationen Part 1</a>
+    </li>
+    <li>
+      <a href="animations2.html" class="button primary">Animationen Part 2</a>
+    </li>
+  </ul>
+</header>
 <html>
-<div id="main">
-<ul>
-<li><strong>Quelle für alle Bilder & Videos: </strong><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Google Drive Ordner</a></li>
-<li><strong>Quelle Videovergleich: </strong><a href="https://www.adobe.com/ch_de/creativecloud/video/discover/best-video-format.html" target="_blank">Videovergleich</a></li>
-<li><strong>Quelle Soundvergleich: </strong><a href="https://lehrerfortbildung-bw.de/st_digital/medienwerkstatt/multimedia/audio/formate/" target="_blank">Soundvergleich</a></li>
-<li><strong>Quelle Bildvergleich: </strong><a href="https://www.techsmith.de/blog/was-sie-ueber-bildformate-wissen-sollten/" target="_blank">Bildvergleich</a></li>
-<li><strong>Youtube Kanal für die Sounds und Videos:</strong> <a href="https://youtube.com/@autismpumpgun7358" target="_blank">AutismPumpgun</a></li>
-
-</ul>
-</div>
+  <div id="main">
+    <ul>
+      <li>
+        <strong>Quelle fÃ¼r alle Bilder & Videos: </strong
+        ><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"
+          >Google Drive Ordner</a
+        >
+      </li>
+      <li>
+        <strong>Quelle Videovergleich: </strong
+        ><a
+          href="https://www.adobe.com/ch_de/creativecloud/video/discover/best-video-format.html"
+          target="_blank"
+          >Videovergleich</a
+        >
+      </li>
+      <li>
+        <strong>Quelle Soundvergleich: </strong
+        ><a
+          href="https://lehrerfortbildung-bw.de/st_digital/medienwerkstatt/multimedia/audio/formate/"
+          target="_blank"
+          >Soundvergleich</a
+        >
+      </li>
+      <li>
+        <strong>Quelle Bildvergleich: </strong
+        ><a
+          href="https://www.techsmith.de/blog/was-sie-ueber-bildformate-wissen-sollten/"
+          target="_blank"
+          >Bildvergleich</a
+        >
+      </li>
+      <li>
+        <strong>Youtube Kanal fuer die Sounds und Videos:</strong>
+        <a href="https://youtube.com/@autismpumpgun7358" target="_blank"
+          >AutismPumpgun</a
+        >
+      </li>
+    </ul>
+  </div>
 </html>
